--- a/package.json
+++ b/package.json
@@ -3,11 +3,21 @@
     "description": "Sample NodeJs web application",
     "version": "0.0.1",
     "private": true,
+    "scripts": {
+        "test": "mocha --recursive tests",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "eject": "react-scripts eject"
+    },
+    "dependencies": {
+        "lottie-web": "^5.2.1",
+        "react": "^16.4.2",
+        "react-dom": "^16.4.2",
+        "react-lottie": "^1.2.3",
+        "react-scripts": "1.1.4"
+    },
     "devDependencies": {
         "mocha": "5.0.0",
         "unit.js": "2.0.0"
-    },
-    "scripts": {
-        "test": "mocha --recursive tests"
     }
 }
