--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "whatwg-fetch": "2.0.3"
   },
   "devDependencies": {
+    "express": "^4.16.3",
     "mocha": "5.0.0",
     "unit.js": "2.0.0"
   },
