--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha --recursive tests",
     "start": "node scripts/start.js",
-    "build": "node scripts/build.js"
+    "build": "node scripts/build.js",
+    "server": "nodemon index.js"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -55,6 +56,7 @@
   "devDependencies": {
     "express": "^4.16.3",
     "mocha": "5.0.0",
+    "nodemon": "^1.18.4",
     "unit.js": "2.0.0"
   },
   "jest": {
