--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "mocha --recursive tests",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "server": "nodemon index.js"
+    "server": "forever start index.js"
   },
   "dependencies": {
     "autoprefixer": "7.1.6",
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "express": "^4.16.3",
+    "forever": "^0.15.3",
     "mocha": "5.0.0",
     "nodemon": "^1.18.4",
     "unit.js": "2.0.0"
